// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Main 1`] = `
<div
  className="pf-c-empty-state styles.modifiers.lg"
>
  <Component
    headingLevel="h5"
    size="lg"
  >
    HTTP Proxies
  </Component>
  <Component>
    Defining HTTP Proxies that exist on your network allows you to perform various actions through those proxies.
  </Component>
  <Button
    aria-label={null}
    className=""
    component="button"
    isActive={false}
    isBlock={false}
    isDisabled={false}
    isFocus={false}
    isHover={false}
    isInline={false}
    type="button"
    variant="primary"
  >
    New HTTP Proxy
  </Button>
  <Component>
    <Button
      aria-label="learn more action"
      className=""
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      isInline={false}
      type="button"
      variant="link"
    >
      Learn more about this in the documentation.
    </Button>
  </Component>
</div>
`;

exports[`EmptyState Main variant regular 1`] = `
<div
  className="pf-c-empty-state"
>
  <Component>
    EmptyState full
  </Component>
</div>
`;

exports[`EmptyState Main variant small 1`] = `
<div
  className="pf-c-empty-state styles.modifiers.sm"
>
  <Component>
    EmptyState small
  </Component>
</div>
`;
